# Detection-Tracking-with-OpenCV

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: Multi-Object-Tracking-doc.docx
include/: MyDetector.h  MyTracker.h  MyTrackers.h  tracked_object.h
lib/: cxxopts.hpp
src/: MyDetector.cpp  MyTracker.cpp  MyTrackers.cpp  tracked_object.cpp
